--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 #map {
         height: 100%;
-        overflow: visible !important;
+       // overflow: visible !important;
       }
       
      
       /* Optional: Makes the sample page fill the window. */
       html, body, .container, .row,.col-md-8 {
         height: 100%;
-	
+        padding-top: 40px;	
       }
 
 #pac-input {
